# msode

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VRACER.json  config.mk  launch.sh  launch_eval.sh  launch_rl.sh  setup.sh  test.cfg
apps/: .gitignore  CMakeLists.txt  Makefile  README.md  ac_separability.cpp  ac_stats.cpp  analytic_control.cpp  app_ac_separability.cpp  app_ac_stats.cpp  app_analytic_control.cpp  app_convex_hull.cpp  app_dump_velocity_field.cpp  app_forward.cpp  app_forward_curve.cpp  app_forward_separability.cpp  app_orient.cpp  app_rl.cpp  app_rl_comp.cpp  app_rl_curriculum.cpp  app_rotating.cpp  convex_hull.cpp  dump_velocity_field.cpp  field_around_trajectories.cpp  forward.cpp  forward_curve.cpp  launch_separability.sh  optimal_path_landscape.cpp  orient.cpp  rl.cpp  rl_helpers.cpp  rl_helpers.h  rotating.cpp  run_ac.cpp  run_rl.cpp  run_rl_comp.cpp  step_out_frequencies.cpp  trajectory_distances.cpp  trajectory_sdf.cpp  turn.cpp  utils.cpp  (+1 more)
apps/ac/: helpers.cpp  helpers.h  optimal_path.cpp  optimal_path.h
apps/analytic_control/: CMakeLists.txt  apply_strategy.cpp  apply_strategy.h  helpers.cpp  helpers.h  optimal_path.cpp  optimal_path.h
apps/results/: sep_N_10.txt  sep_N_2.txt  sep_N_3.txt  sep_N_4.txt  sep_N_5.txt  sep_N_6.txt  sep_N_7.txt  sep_N_8.txt  sep_N_9.txt
apps/rl/: CMakeLists.txt  environment.cpp  environment.h  helpers.cpp  helpers.h  magnetic_field_from_action.cpp  magnetic_field_from_action.h  space.cpp  space.h
apps/utils/: CMakeLists.txt  mean_vel.cpp  mean_vel.h
cmake/Modules/: FindEIGEN.cmake  FindKORALI.cmake  FindSMARTIES.cmake
config/: swimmer0.cfg  swimmer1.cfg
core/: Makefile  factory.cpp  factory.h  file_parser.cpp  file_parser.h  log.h  main.cpp  math.h  quaternion.h  simulation.cpp  simulation.h  types.h
data/config/: swimmer_01.cfg
data/dpd_helix/: README.md
data/mesh/: helix_P_5.0.ply
data/propulsion/: helix_head_P_5.0.txt
launch_scripts/: README.md
launch_scripts/ac/: .gitignore  create_cfg.py  run.sh
launch_scripts/dump_field/: README.md  field.json  run.sh
launch_scripts/forward/: plot.py  x_vs_t.sh
launch_scripts/rl/: VRACER.json  add_noise.py  eval_rl.sh  launch.sh  launch_eval.sh  launch_rl.sh  plot_thermal_noise_success.py  post_robustness.py  post_thermal_noise.py  setup.sh  test_robustness.sh  test_thermal_noise.sh  vary_flow.py
launch_scripts/separability/: launch_separability.sh
movie/: .gitignore
movie/forward/: .gitignore  create_images.sh  generate.sh  materials.json  scene.py  tile_material.json
poc/1D/: .gitignore  README.md  main.py  (+2 more)
rl/: Makefile  environment.cpp  environment.h  magnetic_field_from_action.h  main.cpp  test_environment.cpp
src/: CMakeLists.txt  factory.cpp  log.h  main.cpp  math.h  quaternion.h  simulation.cpp  simulation.h  types.h
src/msode/: CMakeLists.txt  Makefile  factory.h  log.h
src/msode/analytic_control/: CMakeLists.txt  apply_strategy.cpp  apply_strategy.h  helpers.cpp  helpers.h  optimal_path.cpp  optimal_path.h
src/msode/core/: CMakeLists.txt  config.cpp  config.h  factory.cpp  factory.h  file_parser.cpp  file_parser.h  log.cpp  log.h  math.h  quaternion.h  simulation.cpp  simulation.h  types.h  velocity_field.cpp  velocity_field.h
src/msode/core/velocity_field/: constant.cpp  constant.h  factory.cpp  factory.h  interface.cpp  interface.h  none.cpp  none.h  shear.cpp  shear.h  sum.cpp  sum.h  taylor_green_vortex.cpp  taylor_green_vortex.h
src/msode/rl/: CMakeLists.txt  environment.cpp  environment.h  factory.cpp  factory.h  helpers.cpp  helpers.h  magnetic_field_from_action.cpp  magnetic_field_from_action.h  space.cpp  space.h
src/msode/rl/field_from_action/: action_change.cpp  action_change.h  direct.cpp  direct.h  direct3.cpp  direct3.h  factory.cpp  factory.h  interface.cpp  interface.h  local_frame.cpp  local_frame.h  weighted_targets.cpp  weighted_targets.h
src/msode/rl/pos_ic/: ball.cpp  ball.h  ball_curriculum_action.cpp  ball_curriculum_action.h  ball_curriculum_state_drift.h  ball_growing.cpp  ball_growing.h  ball_line.cpp  ball_line.h  ball_random_walk.cpp  ball_random_walk.h  ball_random_walk_drift.cpp  ball_random_walk_drift.h  box.cpp  box.h  const.cpp  const.h  factory.cpp  factory.h  gaussian.cpp  gaussian.h  interface.cpp  interface.h  time_distance.cpp  time_distance.h  time_distance_curriculum.cpp  time_distance_curriculum.h
src/msode/rl/space/: ball.cpp  ball.h  ball_curriculum_action.cpp  ball_curriculum_action.h  ball_curriculum_state.cpp  ball_curriculum_state.h  ball_curriculum_state_drift.cpp  ball_curriculum_state_drift.h  box.cpp  box.h  factory.cpp  factory.h  interface.cpp  interface.h
src/msode/rl/target_distances/: euclidean.cpp  euclidean.h  euclidean_tt.cpp  euclidean_tt.h  factory.cpp  factory.h  interface.h  none.cpp  none.h  square.cpp  square.h  sum.cpp  sum.h  travel_time.cpp  travel_time.h  travel_time_non_optimal.cpp  travel_time_non_optimal.h  travel_time_ordered.cpp  travel_time_ordered.h
src/msode/utils/: CMakeLists.txt  ODE_solver.h  curriculum.cpp  curriculum.h  curriculum_counter.cpp  curriculum_counter.h  integrator.h  mean_vel.cpp  mean_vel.h  rnd.cpp  rnd.h
src/msode/utils/optimizers/: cmaes.cpp  cmaes.h  gradient_descent.h  line_search.h
tools/: action_density.py  action_density.sh  create_mesh.py  create_plots.sh  create_swimmer_cfg.py  flow_efficiency.py  plot_forward.py  plot_positions_omega.py  plot_time_comp.py  plot_trajectories.py  plot_trajectory.py  trajectory_to_vtk.py  utils.py  velocity_field.py
units/: .gitignore  CMakeLists.txt  Makefile  helpers.h  test_ac_opt.cpp  test_advection.cpp  test_body_in_shear.cpp  test_config.cpp  test_factory.cpp  test_file_parser.cpp  test_forward.cpp  test_integration.cpp  test_quaternions.cpp  test_rl_environment.cpp  test_rl_pos_ic.cpp  test_rl_space.cpp  test_thermal_noise.cpp  test_utils_ODE_solver.cpp  test_utils_curriculum.cpp  test_utils_curriculum_counter.cpp  test_utils_optimizers.cpp  test_utils_rnd.cpp  test_velocity_flow.cpp  timer.h
units/chiSquare/: CMakeLists.txt  chiSquare.cpp  chiSquare.h
(+112 files in other folders)
